@@ -1,12 +1,7 @@
-// import com.google.gson.JsonArray;
-// import com.google.gson.JsonElement;
-// import com.google.gson.JsonObject;
-// import com.google.gson.JsonParser;
-
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Scanner;
@@ -16,6 +11,7 @@ public class GitHubUser {
     private static final String GITHUB_API_URL = "https://api.github.com/users";
     private static final int NUMBER_OF_USERS = 20;
 
+    // Store users in a map, keyed by ID
     private Map<String, User> usersMap = new HashMap<>();
 
     public static void main(String[] args) {
@@ -26,46 +22,38 @@ public class GitHubUser {
 
     private void fetchUsers() {
         try {
-            URL url = new URL(GITHUB_API_URL);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setRequestProperty("Accept", "application/json");
-            int responseCode = connection.getResponseCode();
-            int connectionSuccess = HttpURLConnection.HTTP_OK;
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(new URI(GITHUB_API_URL))
+                    .GET()
+                    .header("Accept", "application/json")
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-            if (responseCode == connectionSuccess) {
-                System.out.println("Respone Okey" + responseCode);
-                StringBuilder sb = new StringBuilder();
-                Scanner scanner = new Scanner(connection.getInputStream());
-                while (scanner.hasNext()) {
-                    sb.append(scanner.nextLine());
+            if (response.statusCode() == 200) {
+                System.out.println("Fetched user data successfully!");
+
+                // Manually parse the JSON response (simple string manipulation)
+                String responseBody = response.body();
+                String[] usersArray = responseBody.split("\\},\\{");
+
+                // Fetch details for the first 20 users
+                for (int i = 0; i < NUMBER_OF_USERS && i < usersArray.length; i++) {
+                    String userJson = usersArray[i];
+                    String id = extractValue(userJson, "\"id\":");
+                    String login = extractValue(userJson, "\"login\":");
+                    String detailsUrl = extractValue(userJson, "\"url\":");
+
+                    // Clean up the extracted values
+                    id = cleanValue(id);
+                    login = cleanValue(login);
+                    detailsUrl = cleanValue(detailsUrl);
+
+                    // Fetch detailed user data
+                    fetchUserDetails(id, login, detailsUrl);
                 }
-
-
-
-                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                StringBuilder content = new StringBuilder();
-                String inputLine;
-
-                while ((inputLine = in.readLine()) != null) {
-                    content.append(inputLine);
-                }
-
-                in.close();
-                connection.disconnect();
-
-                // JsonArray users = JsonParser.parseString(content.toString()).getAsJsonArray();
-                // for (int i = 0; i < NUMBER_OF_USERS && i < users.size(); i++) {
-                //     JsonObject userJson = users.get(i).getAsJsonObject();
-                //     String id = userJson.get("id").getAsString();
-                //     String login = userJson.get("login").getAsString();
-                //     String detailsUrl = userJson.get("url").getAsString();
-
-                //     // Fetch detailed user data
-                //     fetchUserDetails(id, login, detailsUrl);
-                // }
             } else {
-                System.out.println("Failed to fetch data. Response code: " + connection.getResponseCode());
+                System.out.println("Failed to fetch data. Response code: " + response.statusCode());
             }
         } catch (Exception e) {
             e.printStackTrace();
@@ -74,32 +62,32 @@ public class GitHubUser {
 
     private void fetchUserDetails(String id, String login, String detailsUrl) {
         try {
-            URL url = new URL(detailsUrl);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setRequestProperty("Accept", "application/json");
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(new URI(detailsUrl))
+                    .GET()
+                    .header("Accept", "application/json")
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-            if (connection.getResponseCode() == 200) {
-                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                StringBuilder content = new StringBuilder();
-                String inputLine;
+            if (response.statusCode() == 200) {
+                // Manually parse the user details (simple string manipulation)
+                String responseBody = response.body();
+                String profileUrl = extractValue(responseBody, "\"html_url\":");
+                String repos = extractValue(responseBody, "\"public_repos\":");
+                String followers = extractValue(responseBody, "\"followers\":");
+                String following = extractValue(responseBody, "\"following\":");
 
-                while ((inputLine = in.readLine()) != null) {
-                    content.append(inputLine);
-                }
+                // Clean up the extracted values
+                profileUrl = cleanValue(profileUrl);
+                repos = cleanValue(repos);
+                followers = cleanValue(followers);
+                following = cleanValue(following);
 
-                in.close();
-                connection.disconnect();
+                // Store the user data in memory
+                User user = new User(id, login, profileUrl, Integer.parseInt(repos), Integer.parseInt(followers), Integer.parseInt(following));
+                usersMap.put(id, user);
 
-                // JsonObject userDetails = JsonParser.parseString(content.toString()).getAsJsonObject();
-                // String name = userDetails.has("name") ? userDetails.get("name").getAsString() : "N/A";
-                // int followers = userDetails.get("followers").getAsInt();
-                // int following = userDetails.get("following").getAsInt();
-                // String company = userDetails.has("company") && !userDetails.get("company").isJsonNull() ? 
-                //                  userDetails.get("company").getAsString() : "N/A";
-
-                // User user = new User(id, login, name, followers, following, company);
-                // usersMap.put(id, user);
             } else {
                 System.out.println("Failed to fetch user details for: " + login);
             }
@@ -118,7 +106,7 @@ public class GitHubUser {
         // Prompt user to enter an ID
         Scanner scanner = new Scanner(System.in);
         System.out.print("Please enter a User ID to see details: ");
-        String inputId = scanner.nextLine();
+        String inputId = scanner.nextLine().trim();
 
         // Display details or handle invalid input
         User user = usersMap.get(inputId);
@@ -131,4 +119,20 @@ public class GitHubUser {
 
         scanner.close();
     }
+
+    // Helper method to extract the value from a key-value pair in a JSON-like string
+    private String extractValue(String json, String key) {
+        int startIndex = json.indexOf(key) + key.length();
+        int endIndex = json.indexOf(",", startIndex);
+        if (endIndex == -1) {
+            endIndex = json.indexOf("}", startIndex); // Handle the last value in the JSON object
+        }
+        return json.substring(startIndex, endIndex);
+    }
+
+    // Helper method to clean up the extracted value (removing quotes and extra characters)
+    private String cleanValue(String value) {
+        return value.replaceAll("[\"{}]", "").trim();
+    }
 }
+
